--- a/config.properties
+++ b/config.properties
@@ -1,4 +1,4 @@
 url=https://www.webstaurantstore.com/
-browser=chrome-headless
+browser=chrome
 username=candali.alina@gmail.com
 password=696XR3d_fTbf9W!
