--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.weborders</groupId>
-    <artifactId>weborders-tdd-framework</artifactId>
+    <artifactId>Webstaurantstore</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
