--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@
                     <version>3.2.5</version>
                     <configuration>
                         <suiteXmlFiles>
+                            <!--suppress UnresolvedMavenProperty -->
                             <suiteXmlFile></suiteXmlFile>
                         </suiteXmlFiles>
                     </configuration>
